--- a/item_page.html
+++ b/item_page.html
@@ -136,56 +136,33 @@
                     <a href="./index.html" class="normal logo nav-link"><img src="images/KILARA.png" alt="logo"></a>
                     <a href="./index.html" class="smartphone logo nav-link"><img src="images/KILARA.small.png" alt="logo.small"></a>
                     <div class="icons">
-                        <a href="tel:012 345 6789" class="phone"><img src="images/phone.png" alt="phone"></a>
+                        <a href="tel:012 345 6789" class="phone"><img src="images/phone.png" width="25px" height="25px" alt="phone"></a>
                         <a href="tel:012 345 6789" class="normal number">012 345 6789</a>
-                        <a href="#" id="open-cart" class="normal cart"><img src="images/cart.png" alt="cart"></a>
+                        <a href="#" id="open-cart" class="cart"><img src="images/cart.png" width="25px" height="25px" alt="cart"></a>
                             <div id="cart-container" class="cart-container">
                                 <div class="cart-content" id="cart-content">
-                                    <a href="#" id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></a>
+                                    <button id="close-cart" class="closebtn"><img src="images/close-btn.png" alt="close"></button>
                                     <h3>Мій кошик</h3>
                                     <div class="export"></div>
                                     <a href="./order.html" class="order nav-link">Оформити замовлення</a>
                                 </div>
                             </div>
-                        <a href="#" id="open-cart-sp" class="smartphone cart"><img src="images/cart.small.png" alt="cart.small"></a>
-                            <div id="cart-container-sp" class="cart-container-sp">
-                                <div class="cart-content-sp">
-                                    <a href="#" id="close-cart-sp" class="closebtn-sp"><img src="images/close-btn.png" alt="close"></a>
-                                    <h4>Мій кошик</h4>
-                                    <div class="export"></div>
-                                    <a href="./order.html" class="order-sp nav-link">Оформити замовлення</a>
-                                </div>
-                            </div>
-                        <a href="#" id="open-user" class="normal user"><img src="images/user.png" alt="user"></a>
+                        <a href="#" id="open-user" class="user"><img src="images/user.png" width="25px" height="25px" alt="user"></a>
                             <div id="user-container" class="user-container">
                                 <div class="user-content">
-                                    <h3>Авторизація</h3>
-                                    <input type="text" class="login" placeholder="E-mail">
-                                    <input type="text" class="login" placeholder="Пароль">
-                                    <label class="rem"><input type="checkbox" class="cb-input"><span class="cb-label">Запама'ятати мене</span></label>
-                                    <a href="#" class="go">Увійти</a>
+                                    <button id="close-user" class="closebtn"><img src="images/close-btn.png" alt="close"></button>
+                                    <form action="login.php" method="post">
+                                        <h3>Авторизація</h3>
+                                        <article>
+                                            <input type="text" name="email" class="login" placeholder="E-mail" required>
+                                            <input type="password" name="password" class="login" placeholder="Пароль" required>
+                                        </article>
+                                        <label><input type="checkbox" name="remember" class="cb-input"> Запама'ятати мене</label>
+                                        <button type="submit" class="go">Увійти</button>
+                                    </form>
                                 </div>
                             </div>
-                        <a href="#" class="smartphone user" id="open-user-sp"><img src="images/user.small.png" alt="user.small"></a>
-                            <div id="user-container-sp" class="user-container-sp">
-                                <div class="user-content-sp">
-                                    <div class="user-upper">
-                                        <a href="#" id="close-user-sp" class="closebtn-sp"><img src="images/close-btn.png" alt="close"></a>
-                                        <h4>Авторизація</h4>
-                                    </div>
-                                    <div class="user-login">
-                                        <input type="text" class="login-sp" placeholder="E-mail">
-                                        <input type="text" class="login-sp" placeholder="Пароль">
-                                        <label class="rem"><input type="checkbox" class="cb-input"><span class="cb-label">Запама'ятати мене</span></label>
-                                    </div>
-                                     <div class="user-enter">
-                                        <a href="#" class="go">Увійти</a>
-                                     </div>   
-                                    
-                                </div>
-                            </div>
-                        <a href="#" class="normal likes"><img src="images/likes.png" alt="likes"></a>
-                        <a href="#" class="smartphone likes"><img src="images/likes.small.png" alt="likes.small"></a>
+                        <a href="#" class="likes"><img src="images/likes.png" width="25px" height="25px" alt="likes"></a>
                     </div>
                 </div>
             </div>
@@ -327,6 +304,7 @@
                             </div>
                         </div>
                         <div class="sp-pg">
+                            <button class="like-this-sp" type="button"><div class="likeThis"><img src="images/likes.png" class="like-icon" alt=""></div></button>
                             <img src="images/dress-1.png" alt="">
                             <img src="images/dress-3.png" alt="">
                             <img src="images/dress-2.png" alt="">
@@ -341,13 +319,23 @@
                             </div>
 
                             <h4>Сукня з квітковим принтом на тонких бретелях</h4>
-                            <img class="smartphone" src="images/likes.small.png" alt="">
-                            <span>740 грн</span>
+                            <div class="upper-low">
+                                <div id="productRatingSummary"></div>
+                                <span>740 грн</span>
+                            </div>
                         </div>
                         <div class="sizes">
                             <div class="sizes-top">
-                                <p>Розмір</p>
-                                <button class="size-btn" id="open-size" type="button">Таблиця розмірів</button>
+                                <p>Розмір:</p>
+                            <ul>
+                                <li><div class="size-box-2">XS</div></li>
+                                <li><div class="size-box-2">S</div></li>
+                                <li><div class="size-box-2">M</div></li>
+                                <li><div class="size-box-2">L</div></li>
+                                <li><div class="size-box-2">XL</div></li>
+                            </ul>
+                            </div>  
+                            <button class="size-btn" id="open-size" type="button">Таблиця розмірів</button>
                                     <div class="size-container" id="size-container">
                                         <div class="size-content" id="size-content">
                                             <img src="images/close-btn.png" class="close-size" id="close-size" alt="">
@@ -389,17 +377,9 @@
                                             </div>
                                         </div>
                                     </div>
-                            </div>  
-                            <ul>
-                                <li><div class="size-box-2">XS</div></li>
-                                <li><div class="size-box-2">S</div></li>
-                                <li><div class="size-box-2">M</div></li>
-                                <li><div class="size-box-2">L</div></li>
-                                <li><div class="size-box-2">XL</div></li>
-                            </ul>
                         </div>
                         <div class="colors">
-                            <p>Колір</p>
+                            <p>Колір:</p>
                             <div class="color-label">
                                 <ul>
                                     <li><input type="radio" class="color-box-2" name="color" style="background-color: #ffffff"></li>
@@ -411,9 +391,9 @@
                         </div>
 
                         <div class="buttons">
-                            <a button class="add-to-cart">Додати в кошик</a>
-                            <a href="./order.html" class="buy-now nav-link">Купити в 1 клік</a>
-                            <a button class="add-to-likes"><img src="images/likes.png" alt=""></a>
+                            <button class="add-to-cart">Додати в кошик</a>
+                            <button class="buy-now">Купити в 1 клік</a>
+                            <button class="add-to-likes"><img src="images/likes.png" width="25px" height="25px" alt=""></button>
                         </div>
                         <div class="nav">
                             <ul>
@@ -481,10 +461,40 @@
 
     <section>
         <div class="container">
-            <h4>Відгуки</h4>
-            <div class="feedback">
-                <div class="prf-pht"><img src="images/profile-photo.png" alt=""></div>
-                
+            <div class="reviews" id="reviewsBlock" data-product-id="poduct-2365">
+                <div class="reviews-heading">
+                    <h4>Відгуки</h4>
+                    <div class="reviews-meta" id="reviewsMeta">0 відгуків . 0.0</div>
+                </div>
+
+                <div class="reviews-list" id="reviewsList" role="list" aria-lebel="polite"></div>
+                <button type="button" class="reviewBtn" id="open-rev">Написати відгук</button>
+                    <div class="revForm-container" id="rev-container">
+                        <form id="reviewForm" class="review-form" aria-label="Форма додавання відгуку">
+                            <img src="images/close-btn.png" class="close-rev" id="close-rev" alt="">
+                            <div class="col">
+                                <h5>Написати відгук</h5>
+                                <div class="stars-input" role="radiogroup" aria-label="Рейтинг">
+                                    <button type="button" class="star-btn" data-value="1" aria-label="1 зірка">☆</button>
+                                    <button type="button" class="star-btn" data-value="2" aria-label="2 зірки">☆</button>
+                                    <button type="button" class="star-btn" data-value="3" aria-label="3 зірки">☆</button>
+                                    <button type="button" class="star-btn" data-value="4" aria-label="4 зірки">☆</button>
+                                    <button type="button" class="star-btn" data-value="5" aria-label="5 зірок">☆</button>
+                                </div>
+                            </div>
+                            <div class="col">
+                                    <input type="text" id="reviewName" class="rev-name" placeholder="Ім'я" aria-lebel="Ім'я" required>
+                                    <input type="text" id="reviewEmal" class="rev-email" placeholder="E-mail" aria-label="E-mail" required>
+                                    <label><input type="checkbox" class="cb-input"> Повідомити про відповідь по електроній пошті</label>
+                            </div>
+                            <div class="row">
+                                <textarea id="reviewText" class="rev-text" placeholder="Ваш відгук" aria-lebel="текст відгуку" required></textarea>
+                            </div>
+                            <div class="form-actions">
+                                <button type="submit" id="submitBtn" class="reviewBtn">Лишити відгук</button>
+                            </div>
+                        </form>
+                    </div>
             </div>
         </div>
     </section>
@@ -498,7 +508,7 @@
                 <div class="catalogue_ct">
                     <div class="block">
                         <div class="img"><a href="#"><img src="images/example-1.png" alt=""></a></div>
-                        <button class="like-this"><div class="likeThis"><img src="images/likes.png" alt=""></div></button>
+                        <button class="like-this"><div class="likeThis"><img src="images/likes.png" width="25px" alt=""></div></button>
                         <div class="text"><p>Коротка сукня з принтом троянд білого кольору</p></div>
                         <div class="color">
                             <a href="">
@@ -539,11 +549,11 @@
                             </a>
                         </div>
                         <div class="price"><p>280 грн</p></div>
-                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png" alt=""></div></button>
+                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png"  width="25px" alt=""></div></button>
                     </div>
                     <div class="block">
                         <div class="img"><a href="#"><img src="images/example-2.png" alt=""></a></div>
-                        <button class="like-this"><div class="likeThis"><img src="images/likes.png" alt=""></div></button>
+                        <button class="like-this"><div class="likeThis"><img src="images/likes.png"  width="25px"  alt=""></div></button>
                         <div class="text"><p>Комплект светр та сукня молочного кольору</p></div>
                         <div class="color">
                             <a href="">
@@ -584,11 +594,11 @@
                             </a>
                         </div>
                         <div class="price"><p>800 грн</p></div>
-                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png" alt=""></div></button>
+                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png"  width="25px" alt=""></div></button>
                     </div>
                     <div class="block">
                         <div class="img"><a href="#"><img src="images/example-3.png" alt=""></a></div>
-                        <button class="like-this"><div class="likeThis"><img src="images/likes.png" alt=""></div></button>
+                        <button class="like-this"><div class="likeThis"><img src="images/likes.png"  width="25px" alt=""></div></button>
                         <div class="text"><p>Коротка сукня бежевого кольру з зав’язками</p></div>
                         <div class="color">
                             <a href="">
@@ -629,11 +639,11 @@
                             </a>
                         </div>
                         <div class="price"><p>300 грн</p></div>
-                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png" alt=""></div></button>
+                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png"  width="25px" alt=""></div></button>
                     </div>
                     <div class="block">
                         <div class="img"><a href="#"><img src="images/example-4.png" alt=""></a></div>
-                        <button class="like-this"><div class="likeThis"><img src="images/likes.png" alt=""></div></button>
+                        <button class="like-this"><div class="likeThis"><img src="images/likes.png"  width="25px"  alt=""></div></button>
                         <div class="text"><p>Довга сукня з чорним верхом та напівпрозорим низом</p></div>
                         <div class="color">
                             <a href="">
@@ -674,12 +684,12 @@
                             </a>
                         </div>
                         <div class="price"><p>500 грн</p></div>
-                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png" alt=""></div></button>
+                        <button class="btn-buy"><div class="buyBtn"><img src="images/cart.png"  width="25px" alt=""></div></button>
                     </div>
                 </div>
                 <nav class="go-check-pages">
-                    <a href="#"><div class="back"><div class="arrow-back"></div></div></a>
-                    <a href="#"><div class="next"><div class="arrow-next"></div></div></a>
+                    <button><div class="back"><div class="arrow-back"></div></div></button>
+                    <button><div class="next"><div class="arrow-next"></div></div></button>
                 </nav>
             </div>   
         </div>
